<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="group27.mad.com.baccalculator.MainActivity">

    <LinearLayout
        android:id="@+id/linearLay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_label_text"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_weight_hint"
            android:inputType="numberDecimal" />

        <Switch
            android:id="@+id/switchGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:showText="true"
            android:text="@string/gender_label_text"
            android:textOff="M"
            android:textOn="F"
            android:textSize="17sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLay1"
        android:layout_marginTop="12dp"
        android:padding="20dp"
        android:text="@string/btn_save" />

    <LinearLayout
        android:id="@+id/linearLay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSave"
        android:paddingBottom="17dp"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drink_size_label_text"
            android:textSize="17sp" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio1oz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="5dp"
                android:text="@string/radio_1oz_text" />

            <RadioButton
                android:id="@+id/radio5oz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/radio_5oz_text" />

            <RadioButton
                android:id="@+id/radio12oz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/radio_12oz_text" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLay3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLay2"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewAlcoholPercLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/alcohol_perc_Label_text"
            android:textSize="17sp" />

        <SeekBar
            android:id="@+id/seekBarAlcoholPerc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:indeterminate="false"
            android:max="5"
            android:progress="1" />

        <TextView
            android:id="@+id/textViewAlcPercBarVal"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/text_5perc"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLay4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLay3"
        android:orientation="horizontal"
        android:padding="7dp">

        <Button
            android:id="@+id/btnAddDrink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_add_drink"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_reset"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLay5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLay4"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/textViewBacValue"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="7dp"
            android:text="@string/bac_level00_label_text"
            android:textSize="32sp" />

        <ProgressBar
            android:id="@+id/progressBarBac"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="25"
            android:progress="0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLay6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLay5"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_label_text"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewBacStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/rounded_corners_safe"
            android:elegantTextHeight="true"
            android:padding="5dp"
            android:text="@string/text_you_are_safe"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>
